{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 48,
  "lineage": "90d5dd44-10b8-5e34-9e44-c0410bb39d1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:security-group/sg-0584b0604529f18d6",
            "description": "Allow HTTP inbound from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0584b0604529f18d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "122610518396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db295417473588c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:vpc/vpc-0db295417473588c5",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ab7f2e330e231c24",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09324d86eb5117e4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db295417473588c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-022fbf9155b0bd9eb",
            "owner_id": "122610518396",
            "tags": {
              "Name": "devops-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:loadbalancer/app/app-cluster-alb/898c787dbafaf21c",
            "arn_suffix": "app/app-cluster-alb/898c787dbafaf21c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-cluster-alb-1008937445.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:loadbalancer/app/app-cluster-alb/898c787dbafaf21c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-cluster-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0584b0604529f18d6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05983ac9d71eef2d8"
              },
              {
                "subnet_id": "subnet-0df0715706d5df266"
              }
            ],
            "subnets": [
              "subnet-05983ac9d71eef2d8",
              "subnet-0df0715706d5df266"
            ],
            "vpc_id": "vpc-0db295417473588c5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:listener/app/app-cluster-alb/898c787dbafaf21c/f40c4f027b80027e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:targetgroup/app-cluster-tg-v2/31f283c8c766d1bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:listener/app/app-cluster-alb/898c787dbafaf21c/f40c4f027b80027e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:loadbalancer/app/app-cluster-alb/898c787dbafaf21c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "module.database.aws_db_instance.this",
            "module.database.aws_db_subnet_group.this",
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.data.aws_vpc.selected",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:targetgroup/app-cluster-tg-v2/31f283c8c766d1bf",
            "arn_suffix": "targetgroup/app-cluster-tg-v2/31f283c8c766d1bf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:122610518396:targetgroup/app-cluster-tg-v2/31f283c8c766d1bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-cluster-tg-v2",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.database.aws_db_instance.this",
            "module.database.aws_db_subnet_group.this",
            "module.ecs.data.aws_vpc.selected",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bc452bb97f0d070",
            "association_id": "eipassoc-0f3f5e16b2a94811f",
            "domain": "vpc",
            "id": "eipalloc-02bc452bb97f0d070",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0976a63696b9c0c97",
            "private_dns": "ip-10-0-0-58.eu-west-3.compute.internal",
            "private_ip": "10.0.0.58",
            "public_dns": "ec2-52-47-58-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.58.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:internet-gateway/igw-0d8a739bfc504ad77",
            "id": "igw-0d8a739bfc504ad77",
            "owner_id": "122610518396",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bc452bb97f0d070",
            "association_id": "eipassoc-0f3f5e16b2a94811f",
            "connectivity_type": "public",
            "id": "nat-01984a1ea2a99d7c5",
            "network_interface_id": "eni-0976a63696b9c0c97",
            "private_ip": "10.0.0.58",
            "public_ip": "52.47.58.23",
            "subnet_id": "subnet-0df0715706d5df266",
            "tags": {
              "Name": "devops-natgw"
            },
            "tags_all": {
              "Name": "devops-natgw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9c3bf34432ca67a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01984a1ea2a99d7c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9c3bf34432ca67a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.natgw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8a739bfc504ad77",
            "id": "r-rtb-0aaf5d0425ef946e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aaf5d0425ef946e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:route-table/rtb-0a9c3bf34432ca67a",
            "id": "rtb-0a9c3bf34432ca67a",
            "owner_id": "122610518396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01984a1ea2a99d7c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db295417473588c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:route-table/rtb-0aaf5d0425ef946e9",
            "id": "rtb-0aaf5d0425ef946e9",
            "owner_id": "122610518396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8a739bfc504ad77",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db295417473588c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098381aff109554e7",
            "route_table_id": "rtb-0a9c3bf34432ca67a",
            "subnet_id": "subnet-0cbcfbf6055c3570b"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0459ae904e3680cbb",
            "route_table_id": "rtb-0a9c3bf34432ca67a",
            "subnet_id": "subnet-0777fa502dc5f61da"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046205c1ae5220e2b",
            "route_table_id": "rtb-0aaf5d0425ef946e9",
            "subnet_id": "subnet-0df0715706d5df266"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0746429523f22fcf0",
            "route_table_id": "rtb-0aaf5d0425ef946e9",
            "subnet_id": "subnet-05983ac9d71eef2d8"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:subnet/subnet-0cbcfbf6055c3570b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbcfbf6055c3570b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610518396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3a"
            },
            "tags_all": {
              "Name": "private-eu-west-3a"
            },
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:subnet/subnet-0777fa502dc5f61da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0777fa502dc5f61da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610518396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3b"
            },
            "tags_all": {
              "Name": "private-eu-west-3b"
            },
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:subnet/subnet-0df0715706d5df266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df0715706d5df266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610518396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3a"
            },
            "tags_all": {
              "Name": "public-eu-west-3a"
            },
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:subnet/subnet-05983ac9d71eef2d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05983ac9d71eef2d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610518396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3b"
            },
            "tags_all": {
              "Name": "public-eu-west-3b"
            },
            "vpc_id": "vpc-0db295417473588c5"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:122610518396:vpc/vpc-0db295417473588c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092be063e6643384f",
            "default_route_table_id": "rtb-022fbf9155b0bd9eb",
            "default_security_group_id": "sg-029434e969c32ba7b",
            "dhcp_options_id": "dopt-09324d86eb5117e4d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db295417473588c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022fbf9155b0bd9eb",
            "owner_id": "122610518396",
            "tags": {
              "Name": "devops-vpc"
            },
            "tags_all": {
              "Name": "devops-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}